force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <description>this object is made for hote app, (used in hotel app)</description>
    <label>Room</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>Room Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>