force-app/main/default/objects/Room__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24-Hour Front Desk</fullName>
            </value>
            <value>
                <fullName>Balcony/Terrace</fullName>
            </value>
            <value>
                <fullName>Breakfast Included</fullName>
            </value>
            <value>
                <fullName>Coffee Maker</fullName>
            </value>
            <value>
                <fullName>Gym Access</fullName>
            </value>
            <value>
                <fullName>Laundry Service</fullName>
            </value>
            <value>
                <fullName>Mini Bar</fullName>
            </value>
            <value>
                <fullName>Parking Facility</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
            <value>
                <fullName>Shuttle Service</fullName>
            </value>
            <value>
                <fullName>Spa Services</fullName>
            </value>
            <value>
                <fullName>Swimming Pool Access</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Wi-Fi Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>