force-app/main/default/objects/Room__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <label>Room No</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>