force-app/main/default/objects/Room__c/fields/RoomCharges__c.field-meta.xml
<CustomField>
    <fullName>RoomCharges__c</fullName>
    <label>RoomCharges</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>