force-app/main/default/objects/Room__c/fields/RoomStatus__c.field-meta.xml
<CustomField>
    <fullName>RoomStatus__c</fullName>
    <label>RoomStatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>