force-app/main/default/objects/Room__c/validationRules/Facilities_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Facilities_rules</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Facilities__c )</errorConditionFormula>
    <errorDisplayField>Facilities__c</errorDisplayField>
    <errorMessage>Please select a Facilitiy.test</errorMessage>
</ValidationRule>