force-app/main/default/objects/Room__c/validationRules/Room_No_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Room_No_rules</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Room_No__c , &quot;^RM_.{0,5}$&quot;) )</errorConditionFormula>
    <errorDisplayField>Room_No__c</errorDisplayField>
    <errorMessage>First 3 letters of room must &apos;RM_&apos; and length must not greater than 8 characters.</errorMessage>
</ValidationRule>