force-app/main/default/objects/Room__c/validationRules/RoomCharges_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>RoomCharges_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( RoomCharges__c ) || (RoomCharges__c &gt; 10000 || RoomCharges__c &lt; 1000)</errorConditionFormula>
    <errorDisplayField>RoomCharges__c</errorDisplayField>
    <errorMessage>Room charges must be between 1000 - 10000.</errorMessage>
</ValidationRule>