force-app/main/default/objects/Room__c/validationRules/Type_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Please Select a Room-Type.</errorMessage>
</ValidationRule>