force-app/main/default/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Room_No__c</columns>
    <columns>Type__c</columns>
    <columns>RoomCharges__c</columns>
    <columns>RoomStatus__c</columns>
    <columns>Facilities__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>